--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -471,6 +471,11 @@
     <None Include="..\..\..\Chimera\build.jam" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\clock\clock_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf_encoder.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf_input_capture.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf_one_pulse.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf_output_compare.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_intf_pwm.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\pwm\pwm_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\pwm\pwm_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\pwm\pwm_user.hpp" />
