--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj.filters
@@ -348,9 +348,6 @@
     <ClCompile Include="..\..\..\Chimera\src\peripherals\uart\chimera_uart.cpp">
       <Filter>Chimera\src\peripherals\uart</Filter>
     </ClCompile>
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart.hpp">
-      <Filter>Chimera\src\peripherals\uart</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_intf.hpp">
       <Filter>Chimera\src\peripherals\uart</Filter>
     </ClInclude>
@@ -363,9 +360,6 @@
     <ClCompile Include="..\..\..\Chimera\src\peripherals\usart\chimera_usart.cpp">
       <Filter>Chimera\src\peripherals\usart</Filter>
     </ClCompile>
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart.hpp">
-      <Filter>Chimera\src\peripherals\usart</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_intf.hpp">
       <Filter>Chimera\src\peripherals\usart</Filter>
     </ClInclude>
@@ -393,12 +387,6 @@
     <ClCompile Include="..\..\..\Chimera\src\serial\chimera_serial.cpp">
       <Filter>Chimera\src\serial</Filter>
     </ClCompile>
-    <ClInclude Include="..\..\..\Chimera\src\serial\serial.hpp">
-      <Filter>Chimera\src\serial</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Chimera\src\serial\serial_base.hpp">
-      <Filter>Chimera\src\serial</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Chimera\src\serial\serial_intf.hpp">
       <Filter>Chimera\src\serial</Filter>
     </ClInclude>
@@ -586,6 +574,15 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer_user.hpp">
       <Filter>Chimera\src\peripherals\timer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\usart\usart_user.hpp">
+      <Filter>Chimera\src\peripherals\usart</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Chimera\src\serial\serial_user.hpp">
+      <Filter>Chimera\src\serial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\uart\uart_user.hpp">
+      <Filter>Chimera\src\peripherals\uart</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
