Update the build.jams to compile better.

--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -491,10 +491,22 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(AuroraIncDir);$(ChimeraBackendIncDirs);$(ChimeraPortDir);$(ChimeraCfgDir);$(ChimeraIncDir)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>$(ChimeraCompilerDefines);$(ChimeraBackendCompilerDefines);$(ProjectCompilerDefines);%(ClCompile.PreprocessorDefinitions);DEBUG=1</PreprocessorDefinitions>
-      <Optimization>Os</Optimization>
+      <Optimization>Og</Optimization>
       <CPPLanguageStandard>CPP2A</CPPLanguageStandard>
       <CLanguageStandard>C2x</CLanguageStandard>
     </ClCompile>
+    <ToolchainSettingsContainer>
+      <InstructionSet>THUMB</InstructionSet>
+    </ToolchainSettingsContainer>
+    <ToolchainSettingsContainer>
+      <FloatABI>hard</FloatABI>
+    </ToolchainSettingsContainer>
+    <ToolchainSettingsContainer>
+      <ARMFPU>fpv4-sp-d16</ARMFPU>
+    </ToolchainSettingsContainer>
+    <ToolchainSettingsContainer>
+      <ARMCPU>cortex-m4</ARMCPU>
+    </ToolchainSettingsContainer>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|STM32L432KC'">
     <ClCompile>
