Fixed compiler issues with simulator
#21

--- a/vs/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC.vcxproj
+++ b/vs/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC/ChimeraStaticLibraryMSVC.vcxproj
@@ -96,21 +96,19 @@
     <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\dma\dma_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\ethernet\ethernet_intf.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\gpio\gpio_user.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\peripheral_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\power\power_types_fwd.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi.hpp" />
-    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_base.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_ext.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_types.hpp" />
+    <ClInclude Include="..\..\..\Chimera\src\peripherals\spi\spi_user.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_intf.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\pwm_types.hpp" />
     <ClInclude Include="..\..\..\Chimera\src\peripherals\timer\timer.hpp" />
@@ -162,7 +160,6 @@
     <ClCompile Include="..\..\..\Chimera\src\common\boost_stubs.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\common\chimera.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\common\compiler_intf.cpp" />
-    <ClCompile Include="..\..\..\Chimera\src\container\chimera_container.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\crc\chimera_crc.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\gpio\chimera_gpio.cpp" />
     <ClCompile Include="..\..\..\Chimera\src\peripherals\power\chimera_power.cpp" />
